--- a/arithmetic-server/ArithmeticServer.vcxproj.filters
+++ b/arithmetic-server/ArithmeticServer.vcxproj.filters
@@ -229,6 +229,18 @@
     <Filter Include="Source Files\Graph\Stream">
       <UniqueIdentifier>{f6f5332c-a008-489f-9e3c-2a7d9d83238b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\MQModel\Requester">
+      <UniqueIdentifier>{0b6d2eb6-4969-4ef2-9bea-f2f1648b65d4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\MQModel\Responser">
+      <UniqueIdentifier>{70a6a9e8-8990-4c4a-8ab1-717fd5f494c6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\MQModel\Requester">
+      <UniqueIdentifier>{e8d3004b-48a8-4d41-ad8b-a482d2d0afe8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\MQModel\Responser">
+      <UniqueIdentifier>{2fca9f01-72e8-41a1-b976-07fa6e79da46}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\Device\Device.cpp">
@@ -797,6 +809,12 @@
     </ClCompile>
     <ClCompile Include="ArithmeticServer.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MQModel\Requester\RequesterModel.cpp">
+      <Filter>Source Files\MQModel\Requester</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MQModel\Responser\ResponserModel.cpp">
+      <Filter>Source Files\MQModel\Responser</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1465,6 +1483,12 @@
     </ClInclude>
     <ClInclude Include="ArithmeticServer.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MQModel\Requester\RequesterModel.h">
+      <Filter>Header Files\MQModel\Requester</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MQModel\Responser\ResponserModel.h">
+      <Filter>Header Files\MQModel\Responser</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
