--- a/arithmetic-server/ArithmeticServer.vcxproj
+++ b/arithmetic-server/ArithmeticServer.vcxproj
@@ -316,7 +316,7 @@
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFrame\MediaFrame.cpp" />
     <ClCompile Include="..\source\MediaGraph\FileMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\File\LocalFileMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\File\FFmpegFileMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\StreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\Stream\LivestreamMediaGraph.cpp" />
@@ -405,7 +405,7 @@
     <ClInclude Include="..\include\MediaFrame\MediaFrame.h" />
     <ClInclude Include="..\include\MediaGraph\FileMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\File\MediaPlayController.h" />
-    <ClInclude Include="..\include\MediaGraph\File\LocalFileMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\File\FFmpegFileMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\StreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\Stream\LivestreamMediaGraph.h" />
