--- a/arithmetic-server/ArithmeticServer.vcxproj
+++ b/arithmetic-server/ArithmeticServer.vcxproj
@@ -305,6 +305,7 @@
     <ClCompile Include="..\source\MediaConverter\YV12ToYUV420PConverter.cpp" />
     <ClCompile Include="..\source\MediaConverter\YUV420PToBGR24Converter.cpp" />
     <ClCompile Include="..\source\MediaData\MediaData.cpp" />
+    <ClCompile Include="..\source\MediaDecoder\FFmpeg\FFmpegVideoDecoder.cpp" />
     <ClCompile Include="..\source\MediaDecoder\MediaDecoder.cpp" />
     <ClCompile Include="..\source\MediaDecoder\MediaMixerDecoder.cpp" />
     <ClCompile Include="..\source\MediaDecoder\SDK\HikvisionSDKDecoder.cpp" />
@@ -313,6 +314,7 @@
     <ClCompile Include="..\source\MediaEncoder\FFmpegEncoder.cpp" />
     <ClCompile Include="..\source\MediaEncoder\JPEG\YUV420PToJPEGEncoder.cpp" />
     <ClCompile Include="..\source\MediaEncoder\MediaEncoder.cpp" />
+    <ClCompile Include="..\source\MediaFilter\Decoder\AVDecoderFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Demuxer\AVDemuxerFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\MediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
@@ -396,6 +398,7 @@
     <ClInclude Include="..\include\MediaConverter\YV12ToYUV420PConverter.h" />
     <ClInclude Include="..\include\MediaConverter\YUV420PToBGR24Converter.h" />
     <ClInclude Include="..\include\MediaData\MediaData.h" />
+    <ClInclude Include="..\include\MediaDecoder\FFmpeg\FFmpegVideoDecoder.h" />
     <ClInclude Include="..\include\MediaDecoder\MediaDecoder.h" />
     <ClInclude Include="..\include\MediaDecoder\MediaMixerDecoder.h" />
     <ClInclude Include="..\include\MediaDecoder\SDK\HikvisionSDKDecoder.h" />
@@ -404,6 +407,7 @@
     <ClInclude Include="..\include\MediaEncoder\FFmpegEncoder.h" />
     <ClInclude Include="..\include\MediaEncoder\JPEG\YUV420PToJPEGEncoder.h" />
     <ClInclude Include="..\include\MediaEncoder\MediaEncoder.h" />
+    <ClInclude Include="..\include\MediaFilter\Decoder\AVDecoderFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Demuxer\AVDemuxerFilter.h" />
     <ClInclude Include="..\include\MediaFilter\MediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
