--- a/arithmetic-server/ArithmeticServer.vcxproj
+++ b/arithmetic-server/ArithmeticServer.vcxproj
@@ -309,7 +309,7 @@
     <ClCompile Include="..\source\MediaDecoder\MediaDecoder.cpp" />
     <ClCompile Include="..\source\MediaDecoder\MediaMixerDecoder.cpp" />
     <ClCompile Include="..\source\MediaDecoder\SDK\HikvisionSDKDecoder.cpp" />
-    <ClCompile Include="..\source\MediaDemuxer\FFmpeg\FFmpegFileMediaDemuxer.cpp" />
+    <ClCompile Include="..\source\MediaDemuxer\FFmpeg\FFmpegAVMediaDemuxer.cpp" />
     <ClCompile Include="..\source\MediaDemuxer\MediaDemuxer.cpp" />
     <ClCompile Include="..\source\MediaEncoder\FFmpegEncoder.cpp" />
     <ClCompile Include="..\source\MediaEncoder\JPEG\YUV420PToJPEGEncoder.cpp" />
@@ -320,11 +320,10 @@
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFrame\MediaFrame.cpp" />
-    <ClCompile Include="..\source\MediaGraph\FileMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\File\FFmpegFileMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\FFmpeg\FFmpegPlaybackStreamMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\PlaybackStreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\StreamMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\Stream\LivestreamMediaGraph.cpp" />
+    <ClCompile Include="..\source\MediaGraph\LiveStreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaPin\InputMediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\MediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\OutputMediaPin.cpp" />
@@ -402,7 +401,7 @@
     <ClInclude Include="..\include\MediaDecoder\MediaDecoder.h" />
     <ClInclude Include="..\include\MediaDecoder\MediaMixerDecoder.h" />
     <ClInclude Include="..\include\MediaDecoder\SDK\HikvisionSDKDecoder.h" />
-    <ClInclude Include="..\include\MediaDemuxer\FFmpeg\FFmpegFileMediaDemuxer.h" />
+    <ClInclude Include="..\include\MediaDemuxer\FFmpeg\FFmpegAVMediaDemuxer.h" />
     <ClInclude Include="..\include\MediaDemuxer\MediaDemuxer.h" />
     <ClInclude Include="..\include\MediaEncoder\FFmpegEncoder.h" />
     <ClInclude Include="..\include\MediaEncoder\JPEG\YUV420PToJPEGEncoder.h" />
@@ -413,12 +412,10 @@
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\TargetMediaFilter.h" />
     <ClInclude Include="..\include\MediaFrame\MediaFrame.h" />
-    <ClInclude Include="..\include\MediaGraph\FileMediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\File\MediaPlayController.h" />
-    <ClInclude Include="..\include\MediaGraph\File\FFmpegFileMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\FFmpeg\FFmpegPlaybackStreamMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\PlaybackStreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\StreamMediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\Stream\LivestreamMediaGraph.h" />
+    <ClInclude Include="..\include\MediaGraph\LiveStreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaPin\InputMediaPin.h" />
     <ClInclude Include="..\include\MediaPin\MediaPin.h" />
     <ClInclude Include="..\include\MediaPin\OutputMediaPin.h" />
